@@ -8,9 +8,11 @@ DIST cdrtools-2.01.01a34.tar.bz2 1661093 RMD160 f7336d304ffcb28124d3ee3fd3fc8d6e
 DIST cdrtools-2.01.01a36.tar.bz2 1664644 RMD160 12ad5e9cf28d620c97e3aa8523851c2fb10eac00 SHA1 581c608395310c518d01a6fdc3fb88ec7d37e1f3 SHA256 2271ffad792fe01b04a7cc472c3ea6511997a1ba5e6060816faaa0d4ab9b481e
 DIST cdrtools-2.01.01a37.tar.bz2 1667934 RMD160 d8d7b5e411dbaf371c67179443c1ba6517110ab6 SHA1 c6bbce4959a12c81a5944d7896959077002851b5 SHA256 7b588b7bb7d0c208820dff94458a14974e1e5d6e4cb378243709f86952969007
 DIST cdrtools-2.01.01a38.tar.bz2 1665727 RMD160 6242ba207ec4434934005337e2507ccb44ba5a4f SHA1 44fb96d5f39abd1ecf79309de44d74edfbc77e39 SHA256 e86d57c6cc96bb65e3e5176e5d21b06d7f742a89f20e008e2f3558a89b7ad006
-EBUILD cdrtools-2.01.01_alpha34.ebuild 3614 RMD160 6b0cf247f0cfa864ba15288f105e7e232d4cb47f SHA1 3a3f80e6e28d5a9d772f46febf39e409c0b2531e SHA256 c233f0abf560ba689ae7cd67537435e4ee275f021149c9333a511998147f07bc
-EBUILD cdrtools-2.01.01_alpha36-r1.ebuild 3649 RMD160 b4ad85f04c36a1377480a68a6692da31cf82c165 SHA1 cb061d940cb6fdd5d7796e3178dfbd2afbaba34e SHA256 d6e9f7a4728533a57c8ce27424bd0cf8cf809a17c7a3fae60c255f729cc14502
-EBUILD cdrtools-2.01.01_alpha37.ebuild 3644 RMD160 bdd87b6398ae7bc4159b8f66a9c251d37d18b23d SHA1 9557d70f4e021c6cb20ea352f03fb4af4bdda04c SHA256 c0764f32664436e4452bda657cfe6248751921f576171fbc780ec143906930c6
-EBUILD cdrtools-2.01.01_alpha38.ebuild 3646 RMD160 c8da32605afc2078e4423c01e5756be09a7b0f33 SHA1 6275673c3d050f2d7e9c1da5e6a32978760924de SHA256 a99419126085c1f8592bd63ff3f2ef4b63965582f8455ba80a36d62f67084d0a
-MISC ChangeLog 30217 RMD160 7e490ff75a47498d3b0c48a7388ffaa3097ac161 SHA1 453b0f80906bfd75640788203f43196209432c87 SHA256 99845ffc3ddb11102909dd9107e9a27412aa5ee930f83aa5181f04a5c3d65741
+DIST cdrtools-2.01.01a39.tar.bz2 1667003 RMD160 c89974a7d21aed87abd6b43b2f1b0373a0b1bf86 SHA1 39d52259adc746c39d996cc7ae74446817d9cddd SHA256 bbfa6fa9e74c12c8d4e09c69f9572fa6a8142823a3f60fab3a6d3459e5d9ac9e
+EBUILD cdrtools-2.01.01_alpha34.ebuild 3602 RMD160 d19b3fdaec93649aacfbad0d426b6c3af121993e SHA1 9507f62b4f09716ad51e2af22f3f88f25ea81446 SHA256 bfa4a6263198fc4d88e0d528cab946b5e32f5ab288518da449f7be86b70958e9
+EBUILD cdrtools-2.01.01_alpha36-r1.ebuild 3637 RMD160 825bf9b1d0575afcc949c7f505cf347f3a589c10 SHA1 e93d1c416b720e2b8febd00adbab0f519eb138ce SHA256 fa22aa2c515dd01c7163e9107f88c4193f75d3a6cebbb19a155ecf4f86baf85e
+EBUILD cdrtools-2.01.01_alpha37.ebuild 3632 RMD160 78b35dede1d0abcac48dd1de3bafcb97cf38cd22 SHA1 32ef01ff76b3d43040beca3778cdf960c6e84dfa SHA256 96f86c2ce953071ec55d3d137869f99a3f6822a6ee00e6a6d1733b96e740c9db
+EBUILD cdrtools-2.01.01_alpha38.ebuild 3634 RMD160 fd1017e84d085c3808ace96b4ad117951dde39b3 SHA1 fab704bba26e9652a1e12b49b80037b992cf7a19 SHA256 f249a326f2122b4689aff25f5cb6a881ff0ff2d534f8340ccc3903c4f740ea7d
+EBUILD cdrtools-2.01.01_alpha39.ebuild 3634 RMD160 9efb09e6b2384f53625034a83dd6d3465bbd0d9b SHA1 f96b58f209dc5fcf1eb4c0e9dbc33fb558ca3a51 SHA256 2a328d337aa3c6294d6ec9f45502b38936e4a7f275ea6390cc181d3e35619ec2
+MISC ChangeLog 30369 RMD160 0a4859820b6c48f806d2b67f5bfc103c4e18db7e SHA1 c8b08b69051afecd382ecfd4ad4a71577c036c6b SHA256 1d8b5d5e9b85022833170d44e7b82dfb9e28aff9cd57217c05e74dc7afbdd00b
 MISC metadata.xml 254 RMD160 f274a70fa23d8064efddcce296e0aed3344bd86b SHA1 ab52ea446603ae6242dae41e0c90fcf7ae8f09cf SHA256 21400abf2dad3e5b7b0d2f7f9586c33cba6336b42a97e1f2b3e7e8b9db0daae5
