@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/cdrtools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.200 2008/04/18 14:36:53 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrtools/ChangeLog,v 1.201 2008/05/16 02:32:06 beandog Exp $
+
+*cdrtools-2.01.01_alpha39 (16 May 2008)
+
+  16 May 2008; Steve Dibb <beandog@gentoo.org>
+  +cdrtools-2.01.01_alpha39.ebuild:
+  Version bump, bug 220327
 
 *cdrtools-2.01.01_alpha38 (18 Apr 2008)
 
